note dublicate bug fix wrap table cells vertical align cells

--- a/src/components/CRM/components/Table.css
+++ b/src/components/CRM/components/Table.css
@@ -5,3 +5,19 @@
 .rt-noData{
     z-index: 0 !important;
 }
+
+.rt-td{
+    display: flex;
+    align-items: center;
+}
+
+.rt-td div{
+    display: flex;
+    align-items: center;
+    white-space: normal;
+}
+
+.rt-td div p{
+    margin: 0;
+    word-wrap: break-word;
+}
